# research_assistant

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
doc_handler/: config.py
doc_handler/llm/: chat.py  chat_old.py  serving.py  state.py  utils.py
notebooks/: test.ipynb
