[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = Chat JP
version = "0.0.1"
description = "LLM chat to emulate its creator behavior"
authors = [{ name = "jotapedro1997@gmail.com" }]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.8"

[tool.black]
line-length = 93
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
