[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doc_handler"
version = "0.0.1"
description = "LLM chat to do research on the internet and in documents"
authors = [{ name = "jotapedro1997@gmail.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"

[tool.black]
line-length = 93
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
